# m-step-thesis-exp

./: .gitignore  .gitmodules  README.md  flake.nix
copilot/: README.md  copilot.sh
copilot/tfm-configs/: nucleo_l552ze_q-mstp-config.cmake
evaluation/: 1-run-all-tests.sh  README.md
evaluation/graphs/: 1-draw-graphs-phd.sh  1-draw-graphs.sh  C04-toy_attack_busted_matrix.txt  C04-toy_attack_int_lat_matrix.txt  README.md
evaluation/graphs/patterns/: 06-cache.txt  06-contention.txt  06-div.txt  06-inst_diff.txt  C04-toy_attack_busted.txt  C04-toy_attack_busted_v2.txt  C04-toy_attack_int_lat.txt
evaluation/graphs/scripts/: gen_matrix.py
evaluation/t1-mstp_metrics/: 1-run-test.sh
evaluation/t10-toy-attack-busted/: 1-run-test.sh
evaluation/t10-toy-attack-busted/logs/: 0_raw_trace.txt  C04-toy_attack_busted.txt  C04-toy_attack_busted_v2_bare.txt
evaluation/t10-toy-attack-busted/outputs/: C04-toy_attack_busted_v2_bare_matrix.txt
evaluation/t11-cch-nemesis/: 1-run-test.sh
evaluation/t11-cch-nemesis/logs/: 0_raw_trace.txt  C04-cch_0x0f.txt  C04-cch_0x55.txt  C04-cch_0xf0.txt  C04-cch_0xff.txt
evaluation/t12-mstp-keypad-poc/: 1-run-test.sh  2-gen_traces.sh  3-extract-trace-matrix.py
evaluation/t12-mstp-keypad-poc/imgs/: alg-promp.md
evaluation/t12-mstp-keypad-poc/logs/: 0_raw_trace.txt  0_trace_matrix_1.txt  0_trace_matrix_10.txt  0_trace_matrix_11.txt  0_trace_matrix_12.txt  0_trace_matrix_13.txt  0_trace_matrix_14.txt  0_trace_matrix_15.txt  0_trace_matrix_16.txt  0_trace_matrix_2.txt  0_trace_matrix_3.txt  0_trace_matrix_4.txt  0_trace_matrix_5.txt  0_trace_matrix_6.txt  0_trace_matrix_7.txt  0_trace_matrix_8.txt  0_trace_matrix_9.txt  C04-key-trace-3.txt  C04-key-trace-4.txt  C04-key-trace-5.txt  C04-key-trace-A.txt  C04-toy_attack_nemesis.txt  C04-toy_attack_nemesis_bare.txt
evaluation/t12-mstp-keypad-poc/logs/pruned_trace/: 0_trace_matrix_1.txt  0_trace_matrix_10.txt  0_trace_matrix_11.txt  0_trace_matrix_12.txt  0_trace_matrix_13.txt  0_trace_matrix_14.txt  0_trace_matrix_15.txt  0_trace_matrix_16.txt  0_trace_matrix_2.txt  0_trace_matrix_3.txt  0_trace_matrix_4.txt  0_trace_matrix_5.txt  0_trace_matrix_6.txt  0_trace_matrix_7.txt  0_trace_matrix_8.txt  0_trace_matrix_9.txt
evaluation/t12-mstp-keypad-poc/outputs/: 0_trace_matrix_10_matrix.txt  0_trace_matrix_11_matrix.txt  0_trace_matrix_12_matrix.txt  0_trace_matrix_13_matrix.txt  0_trace_matrix_14_matrix.txt  0_trace_matrix_15_matrix.txt  0_trace_matrix_16_matrix.txt  0_trace_matrix_1_matrix.txt  0_trace_matrix_2_matrix.txt  0_trace_matrix_3_matrix.txt  0_trace_matrix_4_matrix.txt  0_trace_matrix_5_matrix.txt  0_trace_matrix_6_matrix.txt  0_trace_matrix_7_matrix.txt  0_trace_matrix_8_matrix.txt  0_trace_matrix_9_matrix.txt  C04-key-trace-3_matrix.txt  C04-key-trace-4_matrix.txt  C04-key-trace-5_matrix.txt  C04-key-trace-A_matrix.txt  C04-toy_attack_nemesis_bare_matrix.txt
evaluation/t2-covert-udiv/: 1-run-test.sh  gen_results.py
evaluation/t3-covert-inst/: 1-run-test.sh  analyze.py  gen_results.py
evaluation/t4-covert-cache/: 1-run-test.sh  gen_results.py
evaluation/t5-covert-cont/: 1-run-test.sh  gen_results.py
evaluation/t6_pocs/: 1-run-pocs.sh
evaluation/t6_pocs/src-poc/copilot/: copilot.sh
evaluation/t6_pocs/src-poc/copilot/tfm-configs/: nucleo_l552ze_q-mstp-config.cmake
evaluation/t6_pocs/src-poc/m-step/: CMakeLists.txt
evaluation/t6_pocs/src-poc/m-step-poc-ns/: 0-config.sh  1-compile.sh  2-deploy.sh  3-monitor.sh
evaluation/t6_pocs/src-poc/m-step-poc-ns/src/: mx-generated.cmake
evaluation/t6_pocs/src-poc/m-step-poc-s/patches/: 002-tfm-mstp-metrics.patch  003-mstp-poc.patch
evaluation/t6_pocs/src-poc/m-step/mstp-analyzer/: 1-analyze-trace.sh
evaluation/t6_pocs/src-poc/m-step/mstp-monitor/: monitor.py
evaluation/t7-printf-gtkwave/: 1-run-test.sh
evaluation/t8-toy-attack-cache/: 1-run-test.sh  test_matrix.txt
evaluation/t8-toy-attack-cache/logs/: 0_raw_trace.txt  C04-toy_attack_cache_aux.txt  C04-toy_attack_cache_else.txt  C04-toy_attack_cache_if.txt  test.txt
evaluation/t9-toy-attack-nemesis/: 1-run-test.sh
evaluation/t9-toy-attack-nemesis/logs/: 0_raw_trace.txt  C04-toy_attack_nemesis.txt  C04-toy_attack_nemesis_aux.txt  C04-toy_attack_nemesis_bare.txt
evaluation/t9-toy-attack-nemesis/outputs/: C04-toy_attack_nemesis_bare_matrix.txt
m-step/: CMakeLists.txt  README.md
m-step/mstp-busted/inc/: mstp_busted.h
m-step/mstp-busted/src/: mstp_busted.c
m-step/mstp-cache/inc/: mstp_cache.h  uArchChannel_lib.h
m-step/mstp-cache/src/: i_cache_buffer_ns.s  mstp_cache.c  uArchChannel_lib.c
m-step/mstp-debug/: README.md
m-step/mstp-debug/gdb-py/: 1-gdb-py.sh
m-step/mstp-debug/openocd/: 1-openocd.sh
m-step/mstp-debug/renode/: 1-renode.sh
m-step/mstp-eval/: README.md
m-step/mstp-eval/inc/: mstp_board_setup.h  mstp_eval.h  mstp_eval_cch_nemesis.h  mstp_eval_covert_ch.h  mstp_eval_mstp_keypad_poc.h  mstp_eval_mstp_metrics.h  mstp_eval_poc.h  mstp_eval_prntf_gtk.h  mstp_eval_toy_attack.h  test_eval_config.h
m-step/mstp-eval/src/: mstp_board_setup.c  mstp_eval.c  mstp_eval_cch_nemesis.c  mstp_eval_covert_ch.c  mstp_eval_mstp_keypad_poc.c  mstp_eval_mstp_metrics.c  mstp_eval_poc.c  mstp_eval_prntf_gtk.c  mstp_eval_toy_attack.c
m-step/mstp-metrics/inc/: mstp_metrics.h
m-step/mstp-metrics/src/: mstp_metrics.c
m-step/mstp-monitor/: monitor.py
m-step/mstp-test/inc/: mstp_test.h
m-step/mstp-test/src/: mstp_test.c
m-step/mstp-victims/TAs/PRoT_crypto_attack/: PRoT_crypto_attack.c
m-step/mstp-victims/TAs/appRoT/: appRoT.c
m-step/mstp-victims/s/inc/: test_eval_config.h
m-step/mstp-victims/s/src/: victims.c
m-step/mstp-visualizer/: .gitignore  1-gen-vcd.sh  2-gtkwave.sh
m-step/mstp-visualizer/gtkw_confs/: gtkconf_template.gtkw
m-step/mstp/inc/: mstp.h
m-step/mstp/src/: mstp.c  mstp.s
ns-world-bare/: 0-config.sh  1-compile.sh  3-monitor.sh  README.md
ns-world-bare/src/NonSecure/: CMakeLists.txt
ns-world-bare/src/NonSecure/Core/Src/: gpio.c  main.c
ns-world-bare/src/Secure/Core/Src/: secure_nsc.c
s-world/: README.md
(+16 files in other folders)
